# day-trader

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  agent.py  api.py  benchmark.py  compactor.py  config.py  day_trader_agent_setup.md  docker-compose.yml  entrypoint.sh  market_context.py  market_data.py  overseas_monitors.py  performance_analyst.py  rebalancer.py  requirements.txt  risk_monitor.py  scheduler.py  sentiment_agent.py  server.py  speculation_agent.py
trader-app/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  api.py  config.py  docker-compose.yml  entrypoint.sh  events_agent.py  exchange_calendar.py  expansion.py  market_context.py  market_data.py  overseas_monitors.py  performance_analyst.py  playbook_agent.py  position_sizing.py  pyproject.toml  regime.py  risk_monitor.py  scheduler.py  score_weights.py  server.py  strategy_tracker.py  stress_test.py
trader-app/research/: dedup.py  pipeline.py  ranking.py  source_catalog.py  summarizer.py
trader-app/research/adapters/: __init__.py  finnhub_adapter.py  finviz_adapter.py  fred_adapter.py  reuters_adapter.py
trader-app/tests/: test_clustering.py  test_models.py  test_ranking.py
trader-app/trader/: portfolio.json
trader-app/web/: Dockerfile  package-lock.json  package.json  vitest.config.ts
trader-app/web/src/: middleware.ts
trader-app/web/src/app/: globals.css  layout.tsx
trader-app/web/src/components/: Chat.tsx  Dashboard.module.css  Dashboard.tsx  Events.tsx  Expansion.tsx  IndexTracker.module.css  IndexTracker.tsx  Learn.module.css  Nav.tsx  News.module.css  (+24 more)
(+134 files in other folders)
